# paperless-ngx-mcp

./: .env.example  README.md  lmstudio-mcp-config.json  main.py  pyproject.toml
docs/: vscode-testing.md
openspec/changes/add-document-retrieval-tools/: tasks.md
openspec/changes/add-paperless-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/add-paperless-mcp-server/specs/document-search/: spec.md
openspec/changes/add-paperless-mcp-server/specs/mcp-server/: spec.md
openspec/changes/archive/2026-01-02-add-document-retrieval-tools/: proposal.md  tasks.md
openspec/changes/archive/2026-01-02-add-document-retrieval-tools/specs/document-search/: spec.md
openspec/changes/archive/2026-01-02-add-paperless-mcp-server/: design.md
openspec/changes/archive/2026-01-02-add-paperless-mcp-server/specs/mcp-server/: spec.md
openspec/changes/archive/2026-01-02-add-paperless-mcp-server/specs/openwebui-integration/: spec.md
openspec/changes/archive/2026-01-02-add-paperless-mcp-server/specs/vscode-integration/: spec.md
openspec/specs/document-search/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/openwebui-integration/: spec.md
openspec/specs/vscode-integration/: spec.md
src/paperless_ngx_mcp/: __init__.py  api.py  config.py  server.py  tools.py
